feat: Add comprehensive e-commerce features
 New Features:
- Seller Profile View: View seller profiles with ratings, listings, and history
- VietQR Payment: Bank transfer integration with Vietnamese banks API
- Order Detail Screen: Full order lifecycle with AI insights and payment tracking
- User Profile Management: Edit personal info, view given/received reviews
- File Attachments: Upload images (max 5) and videos (max 1) for listings
- Enhanced Favorites: Access favorited listings even with active orders
- Review System: Bidirectional reviews with edit limits (2 edits within 90 days)

 Backend Improvements:
- Payment Info entity with CASH and VIETQR methods
- Attachment entity for file management
- Enhanced Order entity with cancellation, payment confirmation, and review tracking
- Review entity with edit count and order linkage
- Seller Profile Controller with comprehensive seller stats
- Order Detail AI Controller for seller insights and price justification
- Attachment Controller with proper file upload/download handling
- Bank Service for Vietnamese banks list

 Mobile Improvements:
- CreateListingScreen: Payment method selection, VietQR form, attachment upload
- OrderDetailScreen: Complete order management UI with AI insights
- SellerProfileScreen: Seller information and listing tabs
- SellerRatingsScreen: Full reviews list
- ProfileScreen: Personal profile management with review tabs
- CreateReviewScreen: Review creation and editing
- ListingDetailScreen: Attachment gallery, payment info, seller profile link
- Enhanced MyTabs: Order detail navigation, status colors
- Keyboard handling improvements with dynamic padding

 Bug Fixes:
- Fixed duplicate cancel buttons in OrderDetailScreen
- Fixed FormData upload using native fetch instead of axios
- Fixed column name mapping for Review and Order entities
- Enhanced error handling and logging throughout

 Documentation:
- Updated README with all new features
- Added DEBUG_LOGS.md guide for viewing console logs
- C